--- a/src/ForkFinder/wwwroot/css/site.css
+++ b/src/ForkFinder/wwwroot/css/site.css
@@ -119,10 +119,10 @@ img .mascote {
     right: 0px;
     z-index:0;
 }
-.mascotemais {
+/*.mascotemais {
     min-height: calc(100vh + 378px);
 }
-
+*/
 .restauranteFoto {
     width: 300px;
 }
