--- a/src/ForkFinder/Views/Clientes/Register.cshtml
+++ b/src/ForkFinder/Views/Clientes/Register.cshtml
@@ -10,15 +10,14 @@
         <div class="col-md-auto card py-3" style="width: 26rem;">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link active text-warning" id="home-tab" data-bs-toggle="tab" data-bs-target="#cliente-tab-pane"
-                            type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">
+                    <button class="nav-link active text-warning" data-bs-toggle="tab"
+                            type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">
                         Cliente
                     </button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link text-warning" id="profile-tab" data-bs-toggle="tab" data-bs-target="#restaurante-tab-pane"
-                            type="button" role="tab" aria-controls="profile-tab-pane"
-                            aria-selected="false">
+                    <button class="nav-link text-warning" id="profile-tab" data-bs-toggle="tab" data-bs-href="/Restaurantes/Register"
+                            type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="true">
                         Restaurante
                     </button>
                 </li>
@@ -49,55 +48,24 @@
                             <input asp-for="Senha" class="form-control" />
                             <span asp-validation-for="Senha" class="text-danger"></span>
                         </div>
-                        @*<div class="form-group py-2">
-                            <label asp-for="ConfirmSenha"></label>
-                        <input asp-for="ConfirmSenha" class="form-control" />
-                        <span asp-validation-for="ConfirmSenha" class="text-danger"></span>
-                        </div>*@
                         <div class="form-group text-end py-2">
                             <button type="submit" class="btn btn-warning py-2">Cadastrar</button>
                         </div>
                     </form>
                 </div>
-               @* <div class="tab-pane fade" id="restaurante-tab-pane" role="tabpanel" aria-labelledby="restaurante-tab" tabindex="0">
-                    <form asp-route-returnUrl="@Model" method="post">
-                        <h4>Criar conta Cliente.</h4>
-                        <hr />
-                        <div asp-validation-summary="All" class="text-danger"></div>
-                        <div class="form-group py-2">
-                            <label asp-for="Nome"></label>
-                            <input asp-for="Nome" class="form-control" />
-                            <span asp-validation-for="Nome" class="text-danger"></span>
-                        </div>
-                        <div class="form-group py-2">
-                            <label asp-for="CPF"></label>
-                            <input asp-for="CPF" class="form-control" />
-                            <span asp-validation-for="CPF" class="text-danger"></span>
-                        </div>
-                        <div class="form-group py-2">
-                            <label asp-for="Email"></label>
-                            <input asp-for="Email" class="form-control" />
-                            <span asp-validation-for="Email" class="text-danger"></span>
-                        </div>
-                        <div class="form-group py-2">
-                            <label asp-for="Senha"></label>
-                            <input asp-for="Senha" class="form-control" />
-                            <span asp-validation-for="Senha" class="text-danger"></span>
-                        </div>
-                        @*<div class="form-group py-2">
-                        <label asp-for="ConfirmSenha"></label>
-                        <input asp-for="ConfirmSenha" class="form-control" />
-                        <span asp-validation-for="ConfirmSenha" class="text-danger"></span>
-                        </div>
-                        <div class="form-group text-end py-2">
-                            <button type="submit" class="btn btn-warning py-2">Cadastrar</button>
-                        </div>
-                    </form>*@
-                </div>
             </div>
         </div>
     </div>
 </div>
+
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script>
+        $(document).ready(function () {
+            $("#profile-tab").on("click", function () {
+                var href = $(this).data("bs-href");
+                window.location.href = href;
+            });
+        });
+    </script>
 }
