--- a/src/ForkFinder/Views/Restaurantes/Mesas.cshtml
+++ b/src/ForkFinder/Views/Restaurantes/Mesas.cshtml
@@ -15,19 +15,28 @@
         <div class="col-10 justify-content-end">
             <div class="col">
                 <div id="dateList" class="text-center mb-4">
+                    @{
+                        DateTime? lastDate = null;
+                    }
+
                     @foreach (var agenda in Model.Agendas.OrderBy(d => d.Data))
                     {
-                        <a href="#" class="date-link btn btn-secondary m-2" data-date="@agenda.Data.ToString("dd/MM/yyyy")">@agenda.Data.ToString("dd/MM/yyyy")</a>
+                        if (lastDate != agenda.Data)
+                        {
+                            <a href="#" class="date-link btn btn-secondary m-2" data-date="@agenda.Data.ToString("dd/MM/yyyy")">@agenda.Data.ToString("dd/MM/yyyy")</a>
+                        }
+                        lastDate = agenda.Data;
                     }
                 </div>
             </div>
         </div>
     </div>
+
     <hr />
     <div class="row">
         <div class="col">
             <div id="dateCarousel" class="carousel slide">
-                <div class="carousel-inner">
+                <div class="carousel-inner" id="datavar">
                     @for (int i = 0; i < Model.Agendas.Count; i++)
                     {
                         <div class="carousel-item @(i == 0 ? "active" : "")">
@@ -46,7 +55,9 @@
                                                 <div class="rounded btn btn-outline-secondary px-2">
                                                     @*@horario.Hora*@
                                                     @*<a href="@Url.Action("Reserva", "Restaurantes", new { restauranteId = Model.RestauranteId, mesaId = mesa.Id, horarioId = horario.Id, clienteId = "ClienteId" })" class="btn-reserva" data-mesa="@mesa.Id" data-horario="@horario.Hora">@horario.Hora</a>*@
-                                                    <a href="@Url.Action("Reserva", "Restaurantes", new { restauranteId = Model.RestauranteId, mesaId = mesa.Id, horarioId = horario.Id, clienteId = "ClienteId" })" class="btn-reserva" data-mesa="@mesa.Id" data-horario="@horario.Hora">@horario.Hora.ToString("HH:mm")</a>
+                                                    <a href="@Url.Action("Reserva", "Restaurantes", new { restauranteId = Model.RestauranteId, mesaId = mesa.Id, horarioId = horario.Id, agendaId = @Model.Agendas[i].Id, clienteId = "ClienteId" })" class="btn-reserva" data-mesa="@mesa.Id" data-horario="@horario.Hora" data-indice="@i">@horario.Hora.ToString("HH:mm")</a>
+
+
 
 @*                                                    <a href="@Url.Action("Reserva", "Restaurantes", new { restauranteId = Model.RestauranteId, mesaId = mesa.Id, horarioId = horario.Id, clienteId = "ClienteId" })">@horario.Hora</a>
 *@
@@ -89,20 +100,21 @@
 </div>
 
 @section Scripts {
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    @*<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>*@
     <script>
         $(function () {
             $("#dateCarousel").carousel({
                 interval: false
             });
 
-            $("#dateCarousel").on( function () {
+            $("#dateCarousel").on('slide.bs.carousel', function () {
                 var activeItem = $(this).find(".carousel-item.active");
                 var activeDate = activeItem.find("h4").text().trim();
                 var selectedDate = new Date(activeDate);
             });
+
             $(".date-link").click(function (e) {
                 e.preventDefault();
                 var selectedDate = $(this).data("date");
@@ -121,33 +133,49 @@
                     $("#dateCarousel").carousel(index);
                 }
             });
-        });
-        </script>
-        <script>
-        $(function () {
+
             $(".btn-reserva").click(function (e) {
                 e.preventDefault();
 
                 var mesaId = $(this).data("mesa");
                 var horario = new Date($(this).data("horario")).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-                var agenda = $(this).data("agenda");
+                var indice = $(this).data("indice");
+                var activeItem = $(this).closest(".carousel-item");
+                var activeDate = activeItem.find("h4").text().trim();
+                var agenda = new Date(activeDate);
 
                 $("#mesaSelecionada").text(mesaId);
                 $("#horarioSelecionado").text(horario);
-                $("#agendaSelecionada").text(agenda);
+                $("#agendaSelecionada").text(activeDate);
+                    $("#reservaModal").modal("show");
 
-                $("#Modal-fade").modal("show");
-                $("#reservaModal").modal("show");
-                
+                    $("#confirmarReserva").click(function () {
+                        // Obter os valores dos atributos de dados do botão de reserva
+                        var restauranteId = @Model.RestauranteId;
+                        var mesaId = $(this).data("mesa");
+                        var horarioId = $(this).data("horario");
+                        var indice = $(this).data("indice");
+                        var clienteId = "ClienteId";
+
+                        // Definir a URL de destino
+                        var url = '@Url.Action("Reserva", "Restaurantes", new { restauranteId = "__RESTAURANTE_ID__", mesaId = "__MESA_ID__", horarioId = "__HORARIO_ID__", agendaId = "__AGENDA_ID__", clienteId = "__CLIENTE_ID__" })';
+
+                        // Substituir os marcadores de posição pelos valores corretos
+                        url = url.replace("__RESTAURANTE_ID__", restauranteId);
+                        url = url.replace("__MESA_ID__", mesa.Id);
+                        url = url.replace("__HORARIO_ID__", horario.Id);
+                        url = url.replace("__AGENDA_ID__", indice);
+                        url = url.replace("__CLIENTE_ID__", clienteId);
+
+                        // Redirecionar para a URL
+                        window.location.href = url;
+                    });
             });
 
-            $("#confirmarReserva").click(function () {
-              /*  Tela ou modal?*/
-            });
             $("#fecharModal").click(function () {
                 $("#reservaModal").modal("hide");
-                $("#Modal-fade").modal("hide");
             });
         });
     </script>
+
 }
