--- a/src/ForkFinder/Views/Restaurantes/EditarPerfil.cshtml
+++ b/src/ForkFinder/Views/Restaurantes/EditarPerfil.cshtml
@@ -27,6 +27,14 @@
             <div class="modal-body">
                 <form id="editProfileForm" asp-action="EditarPerfil" method="post" enctype="multipart/form-data">
                     <div class="form-group">
+                        <label asp-for="Nome">Nome</label>
+                        <input asp-for="Nome" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Email">E-mail</label>
+                        <input asp-for="Email" class="form-control" />
+                    </div>
+                    <div class="form-group">
                         <label asp-for="CNPJ">CNPJ</label>
                         <input asp-for="CNPJ" class="form-control" />
                     </div>
