--- a/src/ForkFinder/Views/Restaurantes/Perfil.cshtml
+++ b/src/ForkFinder/Views/Restaurantes/Perfil.cshtml
@@ -11,6 +11,9 @@
         <dt class="col-sm-2">Nome:</dt>
         <dd class="col-sm-10">@Model.Nome</dd>
 
+        <dt class="col-sm-2">Email:</dt>
+        <dd class="col-sm-10">@Model.Email</dd>
+
         <dt class="col-sm-2">CNPJ:</dt>
         <dd class="col-sm-10">@Model.CNPJ</dd>
 
@@ -18,7 +21,7 @@
         <dd class="col-sm-10">
             @if (Model.FotoPerfil != null && Model.FotoPerfil.Length > 0)
             {
-                //<img src="data:image;base64,@Convert.ToBase64String(Model.FotoPerfil)" alt="Foto Perfil" class="img-thumbnail" />
+                <img src="data:image;base64,@Convert.ToBase64String(Model.FotoPerfil)" alt="Foto Perfil" class="img-thumbnail" />
             }
             else
             {
@@ -48,6 +51,14 @@
             </div>
             <div class="modal-body">
                 <form id="editProfileForm" asp-action="EditarPerfil" method="post" enctype="multipart/form-data">
+                    <div class="form-group">
+                        <label asp-for="Nome">Nome</label>
+                        <input asp-for="Nome" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Email">E-mail</label>
+                        <input asp-for="Email" class="form-control" />
+                    </div>
                     <div class="form-group">
                         <label asp-for="CNPJ">CNPJ</label>
                         <input asp-for="CNPJ" class="form-control" />
