--- a/src/ForkFinder/Views/Restaurantes/Perfil.cshtml
+++ b/src/ForkFinder/Views/Restaurantes/Perfil.cshtml
@@ -21,7 +21,7 @@
         <dd class="col-sm-10">
             @if (Model.FotoPerfil != null && Model.FotoPerfil.Length > 0)
             {
-                <img src="data:image;base64,@Convert.ToBase64String(Model.FotoPerfil)" alt="Foto Perfil" class="img-thumbnail" />
+                <img src="data:image;base64,@System.Convert.ToBase64String(Model.FotoPerfil)" alt="Foto Perfil" class="img-thumbnail" />
             }
             else
             {
