--- a/src/ForkFinder/Views/Shared/_Layout.cshtml
+++ b/src/ForkFinder/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-warning" asp-area="" asp-controller="Reservas" asp-action="Index">Reservas</a>
+                            </li>                        
+                            <li class="nav-item">
+                                <a class="nav-link text-warning" asp-area="" asp-controller="Mesas" asp-action="Index">Mesas</a>
                             </li>
                         }
                        @* <li class="nav-item">
@@ -58,7 +61,8 @@
                                 <a class="nav-link text-warning" asp-area="" asp-controller="Produtos" asp-action="Index">Cardápio</a>
                             </li>*@
                        @* }*@
-                            
+                        
+
                         <li class="nav-item">
                             <a class="nav-link text-warning" asp-area="" asp-controller="Especialidades" asp-action="Index">Especialidades</a>
                         </li>                        
